Project will now run on an express server

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap": "latest",
     "angular": "~1.4.8",
-    "angular-route": "latest"
+    "angular-route": "latest",
+    "font-awesome": "~4.5.0"
   }
 }
